Use Files.readString(file) to get file content